# postgres-to-mongo-importer

./: Makefile  README.md  docker-compose.yml  example_starting_file.py  features_we_expect.txt  pyproject.toml  temp.json.json  test.yml
.github/workflows/: main.yml
importer/: __init__.py  db_connections_factory.py  postgres_to_bson_helpers.py
importer/basic/: _useful_progressbar_demo_to_implement.py  basic_copy_importer.py  general_helper_functions.py  postgres_helpers.py
importer/copy/: basic_copy_importer.py  general_helper_functions.py
importer/denormalize/: denormalizer.py
init_scripts/: postgres_initial_test_script.sql
init_scripts/postgres/: country_rivers_initial.sql  world.sql
tests/: conftest.py  test_basic_copy.py  test_basic_copy_importer.py  test_db_connections.py  test_general_helper_functions.py  test_mongo_denormalizer.py  test_postgres_helper_functions.py  useful_scripts.sql
